Fixed bug in css where section-titles had too much margin on some pages

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -139,6 +139,7 @@ and https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_sidenav_dropdow
   font-size: 16pt;
   text-align: center;
   padding-top: 10px;
+  margin: 0px;
 }
 
 .section-title2 {
@@ -147,6 +148,7 @@ and https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_sidenav_dropdow
   font-size: 13pt;
   text-align: center;
   padding-top: 10px;
+  margin: 0px;
 }
 
 .scoreboard {
